--- a/project2/index.html
+++ b/project2/index.html
@@ -22,47 +22,182 @@
             margin: 0;
             /* Optional: Removes default margin for better alignment */
         }
+
+        .row .col-9 .card {
+            /* --bs-card-spacer-y: 2.5rem; */
+            background: rgb(193, 193, 193);
+
+
+
+        }
+
+        .card-img {
+            width: 148px;
+            height: 116px;
+            gap: 0px;
+            opacity: 0px;
+            border-top-left-radius: 24px;
+            /* Round top-left corner */
+            border-bottom-left-radius: 24px;
+            /* Round bottom-left corner */
+            border-top-right-radius: 0;
+            /* Keep top-right corner square */
+            border-bottom-right-radius: 0;
+            /* Keep bottom-right corner square */
+
+        }
+
+        .col-3 {
+            width: 21%;
+        }
+
+        .product-card {
+            width: 740px;
+            height: 119px;
+            top: 188px;
+            left: 30px;
+            gap: 0px;
+            border-radius: 26px;
+            /* Fully rounded corners */
+            border: 2px solid #e9e9e9;
+            ;
+            /* Dark border color */
+            opacity: 0px;
+
+            background: rgba(250, 250, 245, 1);
+
+
+        }
+       
+        .mt-0-04 {
+  margin-top: 0.69rem;
+}
+
+.calculateCard {
+   
+    border-radius: 10px; /* Adjust rounded corners if needed */
+}
+
+.calculate-card-style {
+    width: 131%;
+    height: 100%;
+    background-color: rgba(250, 250, 245, 1);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Optional, for a subtle shadow */
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; /* Push content to the top */
+    padding-top: 20px;
+    height: 100%;
+}
+
+        
     </style>
-    <div class="container mt-4">
-        <div class="row">
-            <div class="col-9">
-                <h1>hello</h1>
-            </div>
-            <div class="col-3 calculateCard">
-                <div class="card" style="width: 18rem;">
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-9">
 
-                    <div class="card-body">
-                        <h5 class="card-title">Order Summery</h5>
-                        <ul>
-                            <li class="d-flex justify-content-between"> 
-                                <span>Subtotal</span>
-                                <span>$27.44</span>
-                            </li>
-                            <li class="d-flex justify-content-between"> 
-                                <span>Shipping</span>
-                                <span>$3.99</span>
-                            </li>
-                            <li class="d-flex justify-content-between"> 
-                                <span>Tax</span>
-                                <span>$2.00</span>
-                            </li>
-                            <li class="d-flex justify-content-between">
-                                <strong>Total</strong>
-                                <strong>$33.43</strong>
-                            </li>
-                        </ul> <br><br><br><br><br><br>
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-success d-flex justify-content-between" type="button">
-                                <span>Continue to payment</span>
-                              <span><i class="fa-solid fa-arrow-right"></i></span>
-                            </button>
-
+            <div class="product-card">
+                <div class="row">
+                    <div class="col-3">
+                        <img class="card-img" src="assets/200aaa186b03d756f101124f8f921a28.jpeg" alt="">
+                    </div>
+                    <div class="col-6 align-items-center container mt-4">
+                        <div class="product-title mt-1">
+                            <strong>Organic ginger</strong>
                         </div>
+                        <div class="product-price-1">
+                            <strong class="text-success">$5.99 / kg</strong>
+                        </div>
+                    </div>
+                    <div class="col-3 text-end p-3 mt-0-04">
+                        <strong class="product-price">
+                            $5.99
+                        </strong>
+                    </div>
+                </div>
+            </div>
+
+            <div class="product-card mt-4">
+                <div class="row">
+                    <div class="col-3">
+                        <img class="card-img" src="assets/53ff6db3442c23537fe73d0771cdb929.jpeg" alt="">
+                    </div>
+                    <div class="col-6 align-items-center container mt-4">
+                        <div class="product-title mt-1">
+                            <strong>Organic ginger</strong>
+                        </div>
+                        <div class="product-price-1">
+                            <strong class="text-success">$5.99 / kg</strong>
+                        </div>
+                    </div>
+                    <div class="col-3 text-end p-3 mt-0-04">
+                        <strong class="product-price">
+                            $5.99
+                        </strong>
+                    </div>
+                </div>
+            </div>
+
+            <div class="product-card mt-4">
+                <div class="row">
+                    <div class="col-3">
+                        <img class="card-img" src="assets/356467b743fd267765421ebcf3f00ae7.jpeg" alt="">
+                    </div>
+                    <div class="col-6 align-items-center container mt-4">
+                        <div class="product-title mt-1">
+                            <strong>Organic ginger</strong>
+                        </div>
+                        <div class="product-price-1">
+                            <strong class="text-success">$5.99 / kg</strong>
+                        </div>
+                    </div>
+                    <div class="col-3 text-end p-3 mt-0-04">
+                        <strong class="product-price">
+                            $5.99
+                        </strong>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="col-3 calculateCard">
+            <div class="card calculate-card-style">
+
+                <div class="card-body">
+                    <h5 class="card-title">Order Summery</h5>
+                    <ul>
+                        <li class="d-flex justify-content-between mt-2">
+                            <span>Subtotal</span>
+                            <span>$27.44</span>
+                        </li>
+                        <li class="d-flex justify-content-between mt-2">
+                            <span>Shipping</span>
+                            <span>$3.99</span>
+                        </li>
+                        <li class="d-flex justify-content-between mt-2">
+                            <span>Tax</span>
+                            <span>$2.00</span>
+                        </li>
+                        <li class="d-flex justify-content-between mt-2">
+                            <strong>Total</strong>
+                            <strong>$33.43</strong>
+                        </li>
+                    </ul>
+                    <div class="d-grid gap-2 mt-auto">
+                        <button class="btn btn-success d-flex justify-content-between" type="button">
+                            <span>Continue to payment</span>
+                            <span><i class="fa-solid fa-arrow-right"></i></span>
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
