--- a/project2/index.html
+++ b/project2/index.html
@@ -14,6 +14,9 @@
 
 <body>
     <style>
+        .card{
+            border-radius: 24px;
+        }
         ul {
             list-style-type: none;
             /* Removes the default bullet points */
@@ -36,9 +39,9 @@
             height: 116px;
             gap: 0px;
             opacity: 0px;
-            border-top-left-radius: 24px;
+            border-top-left-radius: 21px;
             /* Round top-left corner */
-            border-bottom-left-radius: 24px;
+            border-bottom-left-radius: 21px;
             /* Round bottom-left corner */
             border-top-right-radius: 0;
             /* Keep top-right corner square */
@@ -57,7 +60,7 @@
             top: 188px;
             left: 30px;
             gap: 0px;
-            border-radius: 26px;
+            border-radius: 24px;
             /* Fully rounded corners */
             border: 2px solid #e9e9e9;
             ;
