--- a/project2/index.html
+++ b/project2/index.html
@@ -4,202 +4,120 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+ 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
         integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+        <title>ostad-css test-2</title>
 </head>
 
 <body>
-    <style>
-        .card{
-            border-radius: 24px;
-        }
-        ul {
-            list-style-type: none;
-            /* Removes the default bullet points */
-            padding: 0;
-            /* Optional: Removes default padding for a cleaner look */
-            margin: 0;
-            /* Optional: Removes default margin for better alignment */
-        }
 
-        .row .col-9 .card {
-            /* --bs-card-spacer-y: 2.5rem; */
-            background: rgb(193, 193, 193);
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-9">
 
-
-
-        }
-
-        .card-img {
-            width: 148px;
-            height: 116px;
-            gap: 0px;
-            opacity: 0px;
-            border-top-left-radius: 21px;
-            /* Round top-left corner */
-            border-bottom-left-radius: 21px;
-            /* Round bottom-left corner */
-            border-top-right-radius: 0;
-            /* Keep top-right corner square */
-            border-bottom-right-radius: 0;
-            /* Keep bottom-right corner square */
-
-        }
-
-        .col-3 {
-            width: 21%;
-        }
-
-        .product-card {
-            width: 740px;
-            height: 119px;
-            top: 188px;
-            left: 30px;
-            gap: 0px;
-            border-radius: 24px;
-            /* Fully rounded corners */
-            border: 2px solid #e9e9e9;
-            ;
-            /* Dark border color */
-            opacity: 0px;
-
-            background: rgba(250, 250, 245, 1);
-
-
-        }
-       
-        .mt-0-04 {
-  margin-top: 0.69rem;
-}
-
-.calculateCard {
-   
-    border-radius: 10px; /* Adjust rounded corners if needed */
-}
-
-.calculate-card-style {
-    width: 131%;
-    height: 100%;
-    background-color: rgba(250, 250, 245, 1);
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Optional, for a subtle shadow */
-}
-
-.card-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start; /* Push content to the top */
-    padding-top: 20px;
-    height: 100%;
-}
-
-        
-    </style>
-<div class="container mt-4">
-    <div class="row">
-        <div class="col-9">
-
-            <div class="product-card">
-                <div class="row">
-                    <div class="col-3">
-                        <img class="card-img" src="assets/200aaa186b03d756f101124f8f921a28.jpeg" alt="">
-                    </div>
-                    <div class="col-6 align-items-center container mt-4">
-                        <div class="product-title mt-1">
-                            <strong>Organic ginger</strong>
+                <div class="product-card">
+                    <div class="row">
+                        <div class="col-3">
+                            <img class="card-img" src="assets/200aaa186b03d756f101124f8f921a28.jpeg" alt="">
                         </div>
-                        <div class="product-price-1">
-                            <strong class="text-success">$5.99 / kg</strong>
+                        <div class="col-6 align-items-center container mt-4">
+                            <div class="product-title mt-1">
+                                <strong>Organic ginger</strong>
+                            </div>
+                            <div class="product-price-1">
+                                <strong class="text-success">$5.99 / kg</strong>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-3 text-end p-3 mt-0-04">
-                        <strong class="product-price">
-                            $5.99
-                        </strong>
+                        <div class="col-3 text-end p-3 mt-0-04">
+                            <strong class="product-price">
+                                $5.99
+                            </strong>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="product-card mt-4">
-                <div class="row">
-                    <div class="col-3">
-                        <img class="card-img" src="assets/53ff6db3442c23537fe73d0771cdb929.jpeg" alt="">
-                    </div>
-                    <div class="col-6 align-items-center container mt-4">
-                        <div class="product-title mt-1">
-                            <strong>Organic ginger</strong>
+                <div class="product-card mt-4">
+                    <div class="row">
+                        <div class="col-3">
+                            <img class="card-img" src="assets/53ff6db3442c23537fe73d0771cdb929.jpeg" alt="">
                         </div>
-                        <div class="product-price-1">
-                            <strong class="text-success">$5.99 / kg</strong>
+                        <div class="col-6 align-items-center container mt-4">
+                            <div class="product-title mt-1">
+                                <strong>Organic ginger</strong>
+                            </div>
+                            <div class="product-price-1">
+                                <strong class="text-success">$5.99 / kg</strong>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-3 text-end p-3 mt-0-04">
-                        <strong class="product-price">
-                            $5.99
-                        </strong>
+                        <div class="col-3 text-end p-3 mt-0-04">
+                            <strong class="product-price">
+                                $5.99
+                            </strong>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="product-card mt-4">
-                <div class="row">
-                    <div class="col-3">
-                        <img class="card-img" src="assets/356467b743fd267765421ebcf3f00ae7.jpeg" alt="">
-                    </div>
-                    <div class="col-6 align-items-center container mt-4">
-                        <div class="product-title mt-1">
-                            <strong>Organic ginger</strong>
+                <div class="product-card mt-4">
+                    <div class="row">
+                        <div class="col-3">
+                            <img class="card-img" src="assets/356467b743fd267765421ebcf3f00ae7.jpeg" alt="">
                         </div>
-                        <div class="product-price-1">
-                            <strong class="text-success">$5.99 / kg</strong>
+                        <div class="col-6 align-items-center container mt-4">
+                            <div class="product-title mt-1">
+                                <strong>Organic ginger</strong>
+                            </div>
+                            <div class="product-price-1">
+                                <strong class="text-success">$5.99 / kg</strong>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-3 text-end p-3 mt-0-04">
-                        <strong class="product-price">
-                            $5.99
-                        </strong>
+                        <div class="col-3 text-end p-3 mt-0-04">
+                            <strong class="product-price">
+                                $5.99
+                            </strong>
+                        </div>
                     </div>
                 </div>
+
             </div>
+            <div class="col-3 calculateCard">
+                <div class="card calculate-card-style">
 
-        </div>
-        <div class="col-3 calculateCard">
-            <div class="card calculate-card-style">
-
-                <div class="card-body">
-                    <h5 class="card-title">Order Summery</h5>
-                    <ul>
-                        <li class="d-flex justify-content-between mt-2">
-                            <span>Subtotal</span>
-                            <span>$27.44</span>
-                        </li>
-                        <li class="d-flex justify-content-between mt-2">
-                            <span>Shipping</span>
-                            <span>$3.99</span>
-                        </li>
-                        <li class="d-flex justify-content-between mt-2">
-                            <span>Tax</span>
-                            <span>$2.00</span>
-                        </li>
-                        <li class="d-flex justify-content-between mt-2">
-                            <strong>Total</strong>
-                            <strong>$33.43</strong>
-                        </li>
-                    </ul>
-                    <div class="d-grid gap-2 mt-auto">
-                        <button class="btn btn-success d-flex justify-content-between" type="button">
-                            <span>Continue to payment</span>
-                            <span><i class="fa-solid fa-arrow-right"></i></span>
-                        </button>
+                    <div class="card-body">
+                        <h5 class="card-title">Order Summery</h5>
+                        <ul>
+                            <li class="d-flex justify-content-between mt-2">
+                                <span>Subtotal</span>
+                                <span>$27.44</span>
+                            </li>
+                            <li class="d-flex justify-content-between mt-2">
+                                <span>Shipping</span>
+                                <span>$3.99</span>
+                            </li>
+                            <li class="d-flex justify-content-between mt-2">
+                                <span>Tax</span>
+                                <span>$2.00</span>
+                            </li>
+                            <li class="d-flex justify-content-between mt-2">
+                                <strong>Total</strong>
+                                <strong>$33.43</strong>
+                            </li>
+                        </ul>
+                        <div class="d-grid gap-2 mt-auto">
+                            <button class="btn d-flex justify-content-between payment-button" type="button">
+                                <span>Continue to payment</span>
+                                <span><i class="fa-solid fa-arrow-right"></i></span>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
